Registro casi completo

--- a/CodersMX/public/stylesheets/style.scss
+++ b/CodersMX/public/stylesheets/style.scss
@@ -71,3 +71,14 @@ a {
 .login-form-wrapper .field-box .login-btn-group .forgot-link:hover{
   color: #444444;font-size: 0.85em;
 }
+
+
+/*NavBar*/
+.buttons .button.is-primary{
+  //background-color: #424242;
+  color: #424242;
+  //border-color: #424242;
+}
+.buttons .button.is-light{
+  color: #424242;
+}
