--- a/CodersMX/views/login.hbs
+++ b/CodersMX/views/login.hbs
@@ -24,7 +24,7 @@
                   <div class="column is-7 is-offset-1">
                     <h1 class="login-heading">Bienvenido a Coders MX</h1>
                     <p class="login-subheading">Ingresa tus datos y conoce la plataforma donde el conocimento es libre</p>
-                    <form method="" action="">
+                    <form method="" action="POST">
                       <div class="field">
                         <p class="control has-icons-left has-icons-right">
                           <input class="input is-medium" type="email" placeholder="Email" value="" name="email" autofocus="" required>
