--- a/CodersMX/public/stylesheets/style.css
+++ b/CodersMX/public/stylesheets/style.css
@@ -87,4 +87,11 @@ a {
   color: #444444;
   font-size: 0.85em; }
 
+/*NavBar*/
+.buttons .button.is-primary {
+  color: #424242; }
+
+.buttons .button.is-light {
+  color: #424242; }
+
 /*# sourceMappingURL=style.css.map */
