Diseño del registro en proceso

--- a/CodersMX/views/layout.hbs
+++ b/CodersMX/views/layout.hbs
@@ -57,7 +57,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <a class="button is-primary">
+          <a class="button is-primary" href="registro">
             <strong>Registrarme</strong>
           </a>
           <a class="button is-light" href="login">
@@ -68,7 +68,6 @@
     </div>
   </div>
 </nav>
-
   {{{body}}}
 
   
