--- a/CodersMX/views/registro.hbs
+++ b/CodersMX/views/registro.hbs
@@ -9,14 +9,115 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </head>
   <body>
+  <section class="login is-fullheight">
+      <div class="login-body">
+        <div class="container v-middle">
+          <div class="columns login-page">
+              <div class="column is-5 login-sidebar is-hidden-mobile">
+                <div class="login-gradient-background">
+                  <h1> Entrada al portal</h1>
+                </div>
+              </div>
+              <div class="column is-7 login-form-wrapper">
+                
+                <div class="column is-12 field-box">
+                  <div class="column is-7 is-offset-1">
+                    <h1 class="login-heading">Bienvenido a Coders MX</h1>
+                    {{!-- <p class="login-subheading">Ingresa tus datos y conoce la plataforma donde el conocimento es libre</p> --}}
+                    
+                    
+                    <form method="" action="POST">
+                      <div class="field">
+                        <p class="control has-icons-left has-icons-right">
+                          <input class="input is-medium" type="nombre" placeholder="Email" value="" name="email" autofocus="" required>
+                          <span class="icon is-medium is-left">
+                            <i class="fa fa-envelope"></i>
+                          </span>
+                          <span class="icon is-small is-right">
+                            <i class="fa fa-check"></i>
+                          </span>
+                        </p>
+                      </div>
 
+                      <div class="field">
+                        <p class="control has-icons-left has-icons-right">
+                          <input class="input is-medium" type="email" placeholder="Password" name="password" required>
+                          <span class="icon is-medium is-left">
+                            <i class="fa fa-lock"></i>
+                          </span>
+                          <span class="icon is-small is-right">
+                            <i class="fa fa-eye"></i>
+                          </span>
+                        </p>
+                      </div>
 
+                        <div class="field">
+                        <p class="control has-icons-left has-icons-right">
+                          <input class="input is-medium" type="password" placeholder="Password" name="password" required>
+                          <span class="icon is-medium is-left">
+                            <i class="fa fa-lock"></i>
+                          </span>
+                          <span class="icon is-small is-right">
+                            <i class="fa fa-eye"></i>
+                          </span>
+                        </p>
+                      </div>
 
+                      <div class="field">
+                        <p class="control has-icons-left has-icons-right">
+                          <input class="input is-medium" type="Tipo" placeholder="Password" name="password" required>
+                          <span class="icon is-medium is-left">
+                            <i class="fa fa-lock"></i>
+                          </span>
+                          <span class="icon is-small is-right">
+                            <i class="fa fa-eye"></i>
+                          </span>
+                        </p>
+                      </div>
 
+                        <div class="field">
+                        <p class="control has-icons-left has-icons-right">
+                          <input class="input is-medium" type="Direcion" placeholder="Password" name="password" required>
+                          <span class="icon is-medium is-left">
+                            <i class="fa fa-lock"></i>
+                          </span>
+                          <span class="icon is-small is-right">
+                            <i class="fa fa-eye"></i>
+                          </span>
+                        </p>
+                      </div>
 
+                      <div class="field">
+                        <p class="control has-icons-left has-icons-right">
+                          <input class="input is-medium" type="password" placeholder="URL Foto" name="password" required>
+                          <span class="icon is-medium is-left">
+                            <i class="fa fa-lock"></i>
+                          </span>
+                          <span class="icon is-small is-right">
+                            <i class="fa fa-eye"></i>
+                          </span>
+                        </p>
+                      </div>
 
-
-
-
+                      <div class="field is-grouped is-grouped-centered login-btn-group">
+                        <p class="control">
+                          <a class="login-btn">
+                            Entrar
+                          </a>
+                        </p>
+                        <p class="control">
+                          <a class="forgot-link" >Olvidé mi contraseña</a>
+                        </p>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <!-- is-8 ends -->
+          </div>
+        </div>
+        <!-- div.container ends -->
+      </div>
+  </section>
   </body>
 </html>
