--- a/CodersMX/views/registro.hbs
+++ b/CodersMX/views/registro.hbs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../public/stylesheets/style.scss">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
   </head>
   <body>
   <section class="login is-fullheight">
@@ -15,21 +17,21 @@
           <div class="columns login-page">
               <div class="column is-5 login-sidebar is-hidden-mobile">
                 <div class="login-gradient-background">
-                  <h1> Entrada al portal</h1>
+                  <h1> ¿Listo para ser parte?</h1>
                 </div>
               </div>
               <div class="column is-7 login-form-wrapper">
                 
                 <div class="column is-12 field-box">
                   <div class="column is-7 is-offset-1">
-                    <h1 class="login-heading">Bienvenido a Coders MX</h1>
+                    <h1 class="login-heading">Registro a Coders MX</h1>
                     {{!-- <p class="login-subheading">Ingresa tus datos y conoce la plataforma donde el conocimento es libre</p> --}}
                     
                     
-                    <form method="" action="POST">
+                    <form method="post" action="">
                       <div class="field">
                         <p class="control has-icons-left has-icons-right">
-                          <input class="input is-medium" type="nombre" placeholder="Email" value="" name="email" autofocus="" required>
+                          <input class="input is-medium" type="text" placeholder="Usuario" value="" name="nombre" autofocus="" required>
                           <span class="icon is-medium is-left">
                             <i class="fa fa-envelope"></i>
                           </span>
@@ -41,7 +43,7 @@
 
                       <div class="field">
                         <p class="control has-icons-left has-icons-right">
-                          <input class="input is-medium" type="email" placeholder="Password" name="password" required>
+                          <input class="input is-medium" type="email" placeholder="Email" name="email" required>
                           <span class="icon is-medium is-left">
                             <i class="fa fa-lock"></i>
                           </span>
@@ -65,7 +67,11 @@
 
                       <div class="field">
                         <p class="control has-icons-left has-icons-right">
-                          <input class="input is-medium" type="Tipo" placeholder="Password" name="password" required>
+                          <select class="input is-medium" type="text" name="categoria" required>
+                            <option value="PROFESOR"> Profesor</option>
+                            <option value="ESTUDIANTE"> Estudiante</option>
+                            <option value="AUTODIDACTA"> Autodidacta</option>
+
                           <span class="icon is-medium is-left">
                             <i class="fa fa-lock"></i>
                           </span>
@@ -77,7 +83,7 @@
 
                         <div class="field">
                         <p class="control has-icons-left has-icons-right">
-                          <input class="input is-medium" type="Direcion" placeholder="Password" name="password" required>
+                          <input class="input is-medium" type="text" placeholder="Dirección" name="direccion" required>
                           <span class="icon is-medium is-left">
                             <i class="fa fa-lock"></i>
                           </span>
@@ -89,7 +95,7 @@
 
                       <div class="field">
                         <p class="control has-icons-left has-icons-right">
-                          <input class="input is-medium" type="password" placeholder="URL Foto" name="password" required>
+                          <input class="input is-medium" type="text" placeholder="URL Foto" name="userImage" required>
                           <span class="icon is-medium is-left">
                             <i class="fa fa-lock"></i>
                           </span>
@@ -101,9 +107,7 @@
 
                       <div class="field is-grouped is-grouped-centered login-btn-group">
                         <p class="control">
-                          <a class="login-btn">
-                            Entrar
-                          </a>
+                          <input class="login-btn" type="submit" value="Registrar">
                         </p>
                         <p class="control">
                           <a class="forgot-link" >Olvidé mi contraseña</a>
@@ -119,5 +123,11 @@
         <!-- div.container ends -->
       </div>
   </section>
+
+
+  {{!-- Bosstrap Scripts --}}
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
